1.2.4	
	* fix small memoryleak in database_info, org_by_name and org_by_addr (	Boris Zentner )
	* fix version number in setup.py ( Boris Zentner )
	* remove dma_code from test_city.py example ( Boris Zentner )
1.2.3	2008-09-11
	* update test.py - replace www.government.de with www.bundestag.de.
		Add range_by_ip example. ( Boris Zentner )
	* Add range_by_ip - returns largest start and stop ip for any ip.
		Remember to use a IP not a name ( Boris Zentner )
	* Add metro_code as a alias for the depreciated dma_code ( Boris Zentner )
1.2.2	2008-08-13
	* Update test_city.py and test_region.py ( Boris Zentner )
	* Add region_name to GeoIPRegion ( Boris Zentner )
	* Add database_info and database_edition attributes to GeoIP object
		(James Henstridge)
	* Add region_name and time_zone keys to GeoIPRecord wrapper (James
		Henstridge).
	* Export the country list, country code -> country name mapping, and
		country->continent mapping ( Ignacio Vazquez-Abrams )
	* Raise country code counter from 251 to 253 ( Boris Zentner )
	!! record_by_addr and record_by_name return None instead of throwing a
exception. See test_city.py ( Boris Zentner ) 
	* Add a py_geoip.error Exception object. (Boris Zentner)
	* Export the country list, country code -> country name mapping, and country->continent
		mapping ( Ignacio Vazquez-Abrams )
	* Changed license to LGPL from GPL

1.2.1	2005-06-28
	* Added support for GeoIP Region

1.2.0	2003-05-08
	* Added support for GeoIP City

1.1.0	2003-03-18
	* Added support for GeoIP ISP and Organization

0.2.0	2002-06-25
	* Initial Release